# rapyuta

./: .gitignore  .gitmodules  .tags  .tags1  20171220.txt  Makefile  environment.sh  scuderia.yaml  set_ros_master.sh
data/: 0213-3.txt  0824-1x1zoom.txt  0908_multiplot.txt  0913-2.txt  0913-morning.txt  0913.txt  0914.txt  rqt1.txt
data/0914/: 0914-1.txt  0914-final-data.txt
rapyuta_ws/src/apriltags/launch/: usb_cam_apriltags-GUI.launch  usb_cam_apriltags.launch
rapyuta_ws/src/cv_bridge_tutorial_pkg/launch/: usb_canny.launch
rapyuta_ws/src/cv_bridge_tutorial_pkg/src/: sample_cv_bridge_node.cpp
rapyuta_ws/src/navigation_controller/: CMakeLists.txt  package.xml
rapyuta_ws/src/navigation_controller/cmd_txt/: cmd.txt  cmd01.txt  cmd02.txt  cmd03.txt  cmd04.txt  cmd05.txt  cmd06.txt  cmd23.txt  cmd26.txt  cmd31.txt  cmd32.txt  cmd34.txt  cmd50.txt  cmd65.txt
rapyuta_ws/src/navigation_controller/configuration_files/: guide.rviz  iccard.rviz  obstacle.rviz  relocalization.rviz
rapyuta_ws/src/navigation_controller/launch/: bag.launch  command_pub.launch  open_navigation.launch  open_navigation_guide.launch  open_navigation_icard.launch  open_navigation_obs.launch  open_navigation_relocalization.launch  open_navigation_reverse.launch
rapyuta_ws/src/navigation_controller/map/: map.pb  map.pgm
rapyuta_ws/src/navigation_controller/map/622 to 621/: map.pb  map.pgm  map.yaml  map_orginal.pgm
rapyuta_ws/src/navigation_controller/map/elevetor to toilet/: map.pgm  map.yaml
rapyuta_ws/src/navigation_controller/map/toilet to 622/: map.pb  map.pgm  map.yaml
rapyuta_ws/src/navigation_controller/src/: command_pub.cpp  command_pub_srv.cpp  command_pub_srv_gui.cpp  navigation_controller.cpp  show_path-backup.cpp  show_path.cpp
rapyuta_ws/src/navigation_controller/srv/: command.srv
rapyuta_ws/src/rapyuta/: machines  package.xml
rapyuta_ws/src/rapyuta/config/rqt/: Z-height.xml  xy_traj.xml
rapyuta_ws/src/rapyuta_msgs/: CMakeLists.txt
rapyuta_ws/src/rapyuta_pose_estimator/: CMakeLists.txt  package.xml  rapyuta_pose_estimator.kdev4
rapyuta_ws/src/rapyuta_pose_estimator/.kdev4/: rapyuta_pose_estimator.kdev4
rapyuta_ws/src/rapyuta_pose_estimator/include/rapyuta_pose_estimator/: rapyuta_pose_estimator.h
rapyuta_ws/src/rapyuta_pose_estimator/include/rapyuta_pose_estimator/ros/: params.h
rapyuta_ws/src/rapyuta_pose_estimator/src/: node.cpp  params.cpp  rapyuta_pose_estimator -backup-0925.cpp  rapyuta_pose_estimator-Back.cpp  rapyuta_pose_estimator-back.cpp  rapyuta_pose_estimator-revert.cpp  rapyuta_pose_estimator.cpp
rapyuta_ws/src/rapyuta_pose_estimator_lib/: CMakeLists.txt  package.xml
rapyuta_ws/src/rapyuta_pose_estimator_lib/include/rapyuta_pose_estimator_lib/: datatypes.h  mapper.h  mapper_node.h  pose_estimator.h  tag_map.h  utils.h
rapyuta_ws/src/rapyuta_pose_estimator_lib/src/: pose_estimator.cpp
rapyuta_ws/src/rapyuta_pose_estimator_lib/src/mapper/: mapper.cpp  mapper_main.cpp  mapper_node.cpp  tag_map.cpp
rapyuta_ws/src/rapyuta_pose_estimator_lib/src/utils/: utils.cpp
rapyuta_ws/src/raspicam_node/: CMakeLists.txt
rapyuta_ws/src/raspicam_node/camera_info/: camerav2_640x480.yaml  camerav2_raw_640x480.yaml
rapyuta_ws/src/raspicam_node/launch/: camerav2_640x480.launch  camerav2_raw_640x480.launch
rapyuta_ws/src/raspicam_node/src/: raspicam_raw_node.cpp
rapyuta_ws/src/rpg_rapyuta_pose_estimator/rapyuta_pose_estimator_lib/include/rapyuta_pose_estimator_lib/: led_detector.h  p3p.h  pose_estimator.h  visualization.h
rapyuta_ws/src/rviz_config/: demo.rviz  rapyuta.rviz  result0824.rviz  visualization.rviz
rapyuta_ws/src/tags_sub/: CMakeLists.txt
rapyuta_ws/src/tags_sub/include/tags_sub/: tags_sub.h
rapyuta_ws/src/tags_sub/src/: node_tags_sub.cpp  tag_test.cpp  tags_rotation_sub.cpp  tags_sub-back.cpp  tags_sub-backUP.cpp  tags_sub.cpp  tags_sub_0710.cpp
rapyuta_ws/src/transform/: CMakeLists.txt  package.xml
rapyuta_ws/src/transform/launch/: visualization.launch
rapyuta_ws/src/transform/src/: transform.cpp
rapyuta_ws/src/useSophus/: useSophus.cpp
software/Sophus/src/apriltags/: CMakeLists.txt
software/Sophus/src/apriltags/launch/: usb_cam_apriltags-GUI.launch  usb_cam_apriltags.launch
software/Sophus/src/rapyuta/: CMakeLists.txt
software/Sophus/src/rapyuta/config/baseline/calibration/camera_intrinsic/: rapyuta01.yaml
software/Sophus/src/rapyuta/config/baseline/usb_cam/camera_node/: rapyuta01.yaml
software/Sophus/src/rapyuta/config/rqt/: Z_difference.xml  rqt_multiplot.xml
software/Sophus/src/rapyuta/data/: Z_DIFF1-3.txt
software/Sophus/src/rapyuta_pose_estimator/: CMakeLists.txt  package.xml
software/Sophus/src/rapyuta_pose_estimator_lib/: package.xml
software/Sophus/src/rapyuta_pose_estimator_lib/include/rapyuta_pose_estimator_lib/: datatypes.h  pose_estimator.h
software/Sophus/src/tags_sub/: .CMakeLists.txt.swp  CMakeLists.txt
software/Sophus/src/tags_sub/src/: tags_sub.cpp
software/Sophus/src/usb_cam/include/usb_cam/: usb_cam.h
software/Sophus/src/usb_cam/launch/: usb_cam-test.launch  usb_cam.launch
software/Sophus/useSophus/: CMakeLists.txt
software/config/: lcm_environment.sh  pos_multiplot.xml  procman.pmd  rosbag_command.txt
