<?xml version="1.0"?>
<package>
  <name>rapyuta_pose_estimator</name>
  <version>0.0.0</version>
  <description>The rapyuta_pose_estimator package</description>

  <maintainer email="rapyuta@todo.todo">rapyuta</maintainer>


  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rapyuta_pose_estimator_lib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>apriltags</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>cmake_modules</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>rapyuta_pose_estimator_lib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>apriltags</run_depend>
  <run_depend>tf_conversions</run_depend>

  <export>
    <!--nodelet plugin="${prefix}/rapyuta_pose_estimator_nodelet.xml"-->
  </export>
</package>
